--- a/src/components/common/modal/modal.module.css
+++ b/src/components/common/modal/modal.module.css
@@ -2,6 +2,7 @@
 	position: relative;
 	z-index: 2;
 	gap: 0;
+	min-width: 450px;
 	padding: 40px;
     background: black;
 	border-radius: 40px;
@@ -18,12 +19,6 @@
 	width: 100vw;
 	height: 100vh;
 	overflow: hidden;
-}
-
-.header{
-	display: inline-flex;
-	padding-top: 14px;
-	padding-bottom: 14px;
 }
 
 .close{
