--- a/src/components/feed/feed.module.css
+++ b/src/components/feed/feed.module.css
@@ -15,11 +15,11 @@
 
 	.order {
 		display: grid;
-		grid-template-rows: 1fr 1fr 64px;
+		grid-template-rows: 24px 1fr 64px;
 		align-items: center;
 		gap: 24px;
 		width: 536px;
-		height: 166px;
+		min-height: 166px;
 		padding: 24px;
 		background: #1C1C21;
 		border-radius: 24px;
@@ -31,7 +31,7 @@
 
 		.last_line {
 			display: grid;
-			grid-template-columns: 1fr 76px;
+			grid-template-columns: 1fr 90px;
 			align-items: center;
 
 			.images {
@@ -42,7 +42,7 @@
 
 			.sum{
 				display: flex;
-				gap:2px;
+				gap: 6px;
 			}
 		}
 	}
@@ -63,6 +63,7 @@
 .order_details {
 	display: flex;
 	flex-direction: column;
+	place-self: center center;
 	width: 640px;
 	height: 620px;
 
@@ -111,6 +112,12 @@
 			display: flex;
 			flex-direction: column;
 			gap: 24px;
+
+			.list_row{
+				display: flex;
+				flex-direction: row;
+				gap : 16px;
+			}
 
 			.list {
 				display: flex;
