fix for npm run test

--- a/src/components/burger-ingredients/ingredient-item/ingredient-item.module.css
+++ b/src/components/burger-ingredients/ingredient-item/ingredient-item.module.css
@@ -1,21 +1,22 @@
-.container{
-    display: grid;
+.container {
+	display: grid;
 	grid-template-columns: repeat(2, 1fr);
-    place-items: center center;
-    width: 242px;
-    height: 208px;}
-
-.price_container{
-    display: flex;
-    align-items: center;
-    gap: 4px;
+	place-items: center center;
+	width: 242px;
+	height: 208px;
 }
 
-.div1{
+.price_container {
+	display: flex;
+	align-items: center;
+	gap: 4px;
+}
+
+.div1 {
 	grid-area: 1 / 1 / 2 / 2;
 }
 
-.counter{
+.counter {
 	grid-area: 1 / 2 / 2 / 3;
 	align-self: start;
 	width: 24px;
