--- a/src/components/ingredient-details/ingredient-details.module.css
+++ b/src/components/ingredient-details/ingredient-details.module.css
@@ -1,4 +1,4 @@
-.container{
+.container {
 	display: flex;
 	flex-direction: column;
 	justify-self: center;
@@ -8,15 +8,14 @@
 	margin-top: 20px;
 }
 
-.image{
-	width: 100%
+.image {
+	width: 100%;
 }
 
-.energy_value{
+.energy_value {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
 	width: 100%;
 	text-align: center;
 }
-
